# catapult2026

./: .gitignore  README.md  devpost.md  docker-compose.yml
.github/workflows/: deploy-pages.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/routers/: process.py
backend/app/services/: comparison.py  detection.py  tweaker.py
backend/src/vie_backend/: main.py  models.py  routes.py
backend/src/vie_backend/services/: comparison.py  detection.py  tweaker.py  tweaker_model.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/models/: low_poly_face.glb
frontend/src/: App.tsx  index.css
frontend/src/components/: ComparisonSlider.tsx  Footer.tsx  NavBar.tsx  Navbar.tsx  ProcessingAnimation.tsx  WireframeFace.tsx
frontend/src/pages/: Home.tsx  Landing.tsx  Tool.tsx  Upload.tsx
